--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
   <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
 </head>
 <body>
-  <div class="aaa">
+  <div class="eisenhower-matrix">
     <img src="./eisenhower-matrix.jpg">
     <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">
       Want more details?
     </a>
   </div>
-  <div class="centered-main-page-element">
+  <div class="main-section">
     <p id="top-section-for-adding-element-to-list">
       <label for="new-task">Add Item</label>
-      <div class="task-row-wrapper">
+      <div class="task-add-wrapper">
         <input id="new-task" class="task" type="text">
         <button>Add</button>
       </div>
