--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </a>
   </div>
   <div class="main-section">
-    <p id="top-section-for-adding-element-to-list">
+    <p id="add-new-task">
       <label for="new-task">Add Item</label>
       <div class="task-add-wrapper">
         <input id="new-task" class="task" type="text">
