--- a/index.html
+++ b/index.html
@@ -6,54 +6,59 @@
   <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
 </head>
 <body class="body">
-  <div class="eisenhower-matrix">
+  <header class="eisenhower-matrix">
+    <h1 class="h1none"></h1>
     <img class="matrix-img" src="./eisenhower-matrix.jpg">
     <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">
       Want more details?
     </a>
-  </div>
-  <div class="main-section">
-    <p id="add-new-task">
-      <label class="add-task-label" for="new-task">Add Item</label>
-      <div class="task-add-wrapper">
-        <input id="new-task" class="task task-input" type="text">
-        <button class="btn">Add</button>
+  </header>
+  <main class="main">
+    <section>
+      <div id="add-new-task">
+        <label class="add-task-label" for="new-task">Add Item</label>
+        <div class="task-add-wrapper">
+          <input id="new-task" class="task task-input" type="text">
+          <button class="btn">Add</button>
+        </div>
       </div>
-    </p>
-    <h3 class="title-todo">Todo</h3>
-    <ul id="incomplete-tasks">
-      <li class="list-item">
-        <input type="checkbox" class="li-item-checkbox">
-        <label class="task list-item-label">Pay Bills</label>
-        <input type="text" class="task task-input">
-        <button class="edit btn">Edit</button>
-        <button class="delete btn">
-          <img class="del-img" src="./remove.svg">
-        </button>
-      </li>
-      <li class="edit-mode list-item">
-        <input type="checkbox" class="li-item-checkbox">
-        <label class="task list-item-label edit-mode-label">Go Shopping</label>
-        <input type="text" value="Go Shopping" class="task task-input">
-        <button class="edit btn">Save</button>
-        <button class="delete btn">
-          <img class="del-img" src="./remove.svg">
-        </button>
-      </li>
-    </ul>
-    <h3 class="title-completed">Completed</h3>
-    <ul id="completed-tasks">
-      <li class="list-item">
-        <input type="checkbox" checked class="li-item-checkbox">
-        <label class="task list-item-label label-completed">See the Doctor</label>
-        <input type="text" class="task task-input">
-        <button class="edit btn">Edit</button>
-        <button class="delete btn">
-          <img class="del-img" src="./remove.svg">
-        </button>
-      </li>
-    </ul>
-  </div>
+    </section>
+    <section>
+      <h2 class="title-todo">Todo</h2>
+      <ul id="incomplete-tasks">
+        <li class="list-item">
+          <input type="checkbox" class="li-item-checkbox">
+          <label class="task list-item-label">Pay Bills</label>
+          <input type="text" class="task task-input">
+          <button class="edit btn">Edit</button>
+          <button class="delete btn">
+            <img class="del-img" src="./remove.svg">
+          </button>
+        </li>
+        <li class="edit-mode list-item">
+          <input type="checkbox" class="li-item-checkbox">
+          <label class="task list-item-label edit-mode-label">Go Shopping</label>
+          <input type="text" value="Go Shopping" class="task task-input">
+          <button class="edit btn">Save</button>
+          <button class="delete btn">
+            <img class="del-img" src="./remove.svg">
+          </button>
+        </li>
+      </ul>
+      <h2 class="title-completed">Completed</h2>
+      <ul id="completed-tasks">
+        <li class="list-item">
+          <input type="checkbox" checked class="li-item-checkbox">
+          <label class="task list-item-label label-completed">See the Doctor</label>
+          <input type="text" class="task task-input">
+          <button class="edit btn">Edit</button>
+          <button class="delete btn">
+            <img class="del-img" src="./remove.svg">
+          </button>
+        </li>
+      </ul>
+    </section>
+  </main>
   <script src="app.js"></script>
 </body>
 </html>
