--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body class="body">
   <header class="eisenhower-matrix">
     <h1 class="h1none"></h1>
-    <img class="matrix-img" src="./eisenhower-matrix.jpg">
+    <img class="matrix-img" src="./eisenhower-matrix.jpg" alt="The Eisenhower matrix">
     <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">
       Want more details?
     </a>
@@ -32,7 +32,7 @@
           <input type="text" class="task task-input">
           <button class="edit btn">Edit</button>
           <button class="delete btn">
-            <img class="del-img" src="./remove.svg">
+            <img class="del-img" src="./remove.svg" alt="Delete icon">
           </button>
         </li>
         <li class="edit-mode list-item">
@@ -41,7 +41,7 @@
           <input type="text" value="Go Shopping" class="task task-input">
           <button class="edit btn">Save</button>
           <button class="delete btn">
-            <img class="del-img" src="./remove.svg">
+            <img class="del-img" src="./remove.svg" alt="Delete icon">
           </button>
         </li>
       </ul>
@@ -53,7 +53,7 @@
           <input type="text" class="task task-input">
           <button class="edit btn">Edit</button>
           <button class="delete btn">
-            <img class="del-img" src="./remove.svg">
+            <img class="del-img" src="./remove.svg" alt="Delete icon">
           </button>
         </li>
       </ul>
