feat(no-rule): add meta tags and lines around the head tag, change class in button tag in Add part

--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Todo App</title>
   <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
   <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
 </head>
+
 <body class="body">
   <header class="eisenhower-matrix">
     <h1 class="eisenhower-matrix__h1none"></h1>
@@ -18,7 +23,7 @@
       <label class="add-task__label" for="new-task">Add Item</label>
       <div class="add-task__wrapper">
         <input id="new-task" class="task task-input" type="text">
-        <button class="tasks__btn">Add</button>
+        <button class="btn">Add</button>
       </div>
     </section>
     <section class="objectives">
